fix: minor changes to logging levels